fix overlap between adjacent highlighted blocks

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -141,5 +141,7 @@ blockquote
   border-left: 0.2rem solid $theme
   position: relative
   background: var(--haze)
+  + .highlight_wrap
+    margin-top: 2.25rem
 p
   padding: 0.8rem 0
