--- a/assets/sass/_syntax.sass
+++ b/assets/sass/_syntax.sass
@@ -39,6 +39,8 @@ code
     position: relative
     padding: 0 1rem
     margin: 1.5rem auto 1rem auto
+    & + &
+      margin-top: 2.25rem
     &:hover > div
       opacity: 1
     .lang
